# feature-homework_10_1

./: .black  .isort  .mypy  README.md  pyproject.toml  requirements.txt
src/: masks.py  processing.py  widget.py
